@@ -112,14 +112,3 @@ compileJava.options.forkOptions.jvmArgs += [
         '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
         '--add-exports=java.base/sun.reflect.annotation=ALL-UNNAMED'
 ]
-
-compileKotlin.options.forkOptions.jvmArgs += [
-        '--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
-        '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
-        '--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
-        '--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
-        '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
-        '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
-        '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
-        '--add-exports=java.base/sun.reflect.annotation=ALL-UNNAMED'
-]
